--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node mwomon.js"
     },
     "dependencies": { 
-     "discord.js": "github:discordjs/discord.js",
+     "discord.js": "11.3.2",
      "request": "2.81.0",
      "cheerio": "^1.0.0-rc.2",
      "mysql": "^2.15.0",
